--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.layout {
+  display: grid;
+  grid-template-columns: 200px minmax(100px, 1fr) 300px;
+  height: 100vh;
+
+  &__middle {
+    overflow-x: scroll;
+  }
+}
